test/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: cherry
  name: flask-app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/default-backend: ingress-nginx-controller
    ## tells ingress to check for regex in the config file
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header Access-Control-Allow-Methods "POST, GET, OPTIONS";
      add_header Access-Control-Allow-Credentials true;
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"

    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-headers:	string
    nginx.ingress.kubernetes.io/cors-expose-headers:	"*, X-CustomResponseHeader"
    nginx.ingress.kubernetes.io/cors-allow-credentials:	"true"
spec:
  rules:
  - host: ekscherry.redcarpetup.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: flask-app
            port: 
              number: 9001
  - host:  apicherry-v3.redcarpetup.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: flask-app
            port: 
              number: 9001
